examples/code/memory-repr/reprs.topscript
#silent true;;
#use "topfind";;
#thread;;
#camlp4o;;
#require "core";;
#require "core.top";;
#require "ppx_jane";;
#silent false;;
[@@@part "0.5"];;
Obj.is_block (Obj.repr (1,2,3)) ;;
[%%expect ocaml {|- : bool = true|}];;
Obj.is_block (Obj.repr 1) ;;
[%%expect ocaml {|- : bool = false|}];;
[@@@part "1"];;
Obj.tag (Obj.repr 1.0) ;;
[%%expect ocaml {|- : int = 253|}];;
Obj.double_tag ;;
[%%expect ocaml {|- : int = 253|}];;
[@@@part "2"];;
Obj.double_tag ;;
[%%expect ocaml {|- : int = 253|}];;
Obj.double_array_tag ;;
[%%expect ocaml {|- : int = 254|}];;
[@@@part "3"];;
Obj.tag (Obj.repr [| 1.0; 2.0; 3.0 |]) ;;
[%%expect ocaml {|- : int = 254|}];;
Obj.tag (Obj.repr (1.0, 2.0, 3.0) ) ;;
[%%expect ocaml {|- : int = 0|}];;
Obj.double_field (Obj.repr [| 1.1; 2.2; 3.3 |]) 1 ;;
[%%expect ocaml {|- : float = 2.2|}];;
Obj.double_field (Obj.repr 1.234) 0 ;;
[%%expect ocaml {|- : float = 1.234|}];;
[@@@part "4"];;
type t = Apple | Orange | Pear ;;
[%%expect ocaml {|type t = Apple | Orange | Pear|}];;
((Obj.magic (Obj.repr Apple)) : int) ;;
[%%expect ocaml {|- : int = 0|}];;
((Obj.magic (Obj.repr Pear)) : int) ;;
[%%expect ocaml {|- : int = 2|}];;
Obj.is_block (Obj.repr Apple) ;;
[%%expect ocaml {|- : bool = false|}];;
[@@@part "5"];;
type t = Apple | Orange of int | Pear of string | Kiwi ;;
[%%expect ocaml {|type t = Apple | Orange of int | Pear of string | Kiwi|}];;
Obj.is_block (Obj.repr (Orange 1234)) ;;
[%%expect ocaml {|- : bool = true|}];;
Obj.tag (Obj.repr (Orange 1234)) ;;
[%%expect ocaml {|- : int = 0|}];;
Obj.tag (Obj.repr (Pear "xyz")) ;;
[%%expect ocaml {|- : int = 1|}];;
(Obj.magic (Obj.field (Obj.repr (Orange 1234)) 0) : int) ;;
[%%expect ocaml {|- : int = 1234|}];;
(Obj.magic (Obj.field (Obj.repr (Pear "xyz")) 0) : string) ;;
[%%expect ocaml {|- : string = "xyz"|}];;
[@@@part "6"];;
Pa_type_conv.hash_variant "Foo" ;;
[%%expect{|
Characters 0-25:
Error: Unbound module Pa_type_conv
|}];;
(Obj.magic (Obj.repr `Foo) : int) ;;
[%%expect ocaml {|- : int = 3505894|}];;
